<resources>
    <string name="appName">Агитатор</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="exit">Выйти</string>
    <string name="versionToast">Версия приложения %s.%s от %s - %s.</string>
    <string name="versionShort">Версия: %s</string>
    <string name="alphaText">альфа версия</string>
    <string name="betaText">бета версия</string>
    <string name="releaseCandidateText">выпуск-кандидат</string>
    <string name="productionText">публичный выпуск</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="accessDenied">Доступ к приложению ограничен. Нет соответствующей роли, обратитесь к администратору.</string>
    <string name="serverNotAvailable">Сервер не доступен</string>
    <string name="offlineDenied">Авторизации в offline не доступна, требуется выполнить вход в online</string>
    <string name="signOutMessage">Нажмите повторно для выхода из приложения.</string>
    <string name="synchronization">Синхронизация</string>
    <string name="userProfile">Профиль пользователя</string>
    <string name="start">Старт</string>
    <string name="settings">Настройки</string>
    <string name="debug_mode">Отладка</string>
    <string name="cancel">Отмена</string>
    <string name="network_error">Отсутствует подключение к интернету. Нажмите на кнопку старт чтобы попоробовать снова</string>
    <string name="info">Информация</string>
    <string name="notice">Примечание</string>
    <string name="address">Адрес</string>
    <string name="general_info">Общая информация</string>
    <string name="not_permissions">Предоставлены не все разрешения.</string>
    <string name="permissions_grant">Разрешения получены.</string>
    <string name="search">Поиск</string>
    <string name="routes_sort">Сортировка маршрутов</string>

    <plurals name="plurals_routes">
        <item quantity="zero">%1$d квартир</item>
        <item quantity="one">%1$d квартира</item>
        <item quantity="two">%1$d квартиры</item>
        <item quantity="few">%1$d квартир</item>
        <item quantity="many">%1$d квартир</item>
        <item quantity="other">%1$d квартиры</item>
    </plurals>
    <string name="geo">Получение geo-данных</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_server_connection">Нет соединение с сервером</string>
    <string name="appartament_all">Всего</string>
    <string name="appartament_done">Выполнено</string>
    <string name="appartament_lost">Осталось</string>
    <string name="statistic">Статистика</string>
    <string name="my_contacts">Мои контакты</string>
    <string name="my_contact">Мой контакт</string>
    <string name="phone_number">Номер телефона</string>
    <string name="clear">Очистить</string>
    <string name="show_password">Показать пароль</string>
    <string name="finger">Отпечаток пальца</string>
    <string name="to_simple_authorization">Вернуться к обычной авторизации</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="save">Сохранить</string>
    <string name="fio">ФИО</string>
    <string name="delete_record">Удалить запись</string>
    <string name="lost_comment">Оставить комментарий</string>
    <string name="your_comment">Ваш комментарий</string>
    <string name="contact_data">Контактные данные</string>
    <string name="add_contact">Добавить контактную информацию</string>
    <string name="contact_lost">Контакты отсутствуют. Для добавления записи нажмите +</string>
    <string name="voting_lost">Проживают ли в квартире, голосующие на дому?</string>
    <string name="vote_rating">Как Вы оцениваете результат общения?</string>
    <string name="reset">Сбросить</string>
    <string name="route_filter">Фильтрация домов</string>
    <string name="drop_pin_code">Сбросить пин-код</string>
    <string name="other">Прочее</string>
    <string name="main">Главное</string>
    <string name="rating">Рейтинг</string>
    <string name="uik_filters">Фильтрация по УИК</string>
    <string name="who_me">Где я?</string>
    <string name="filter_appartament_doned">Установлен фильтр.\nВсе квартиры пройдены</string>
    <string name="filter_house_doned">Установлен фильтр.\nВсе дома пройдены</string>
    <string name="feedback">Обратная связь</string>
    <string name="send">Отправить</string>
    <string name="description">Описание</string>
    <string name="internet_is_slow_sync">Текущее интернет соединение является недостаточно быстрым для синхронизации.</string>
    <string name="internet_is_slow">Для корректной работы нужен более стабильный интернет</string>
    <string name="help">Справка</string>
    <string name="rating_num">Оценка</string>
    <string name="rating_voice">Оценить результат общения</string>
    <string name="next">Далее</string>
    <string name="no_feedbacks">Ответов на обращения не поступало</string>
    <string name="no_my_contacts">Нет новых контактов</string>
    <string name="notifications">Ответы</string>
    <string name="update_today">Обновить сейчас</string>
    <string name="hide_zero_priority">Скрыть с нулевым рейтингом</string>
    <string name="show_zero_priority">Показать с нулевым рейтингом</string>
</resources>