...
        android:visibility="gone"
        tools:visibility="visible"
        android:elevation="4dp"
        tools:targetApi="lollipop" />

    <ru.mobnius.vote.ui.component.PinCodeLinLay
        android:id="@+id/pinFragment_pclTop"
        android:layout_marginTop="@dimen/size_s_24"
        app:layout_constraintBottom_toTopOf="@+id/pinFragment_llDigits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
...
                android:layout_height="@dimen/size_l_56"
                android:text="@string/_0"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/size_s_24"/>

            <ImageButton
                android:id="@+id/pin_clear"
                android:gravity="end"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="11dp"
                android:layout_marginStart="11dp"
...

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/pin_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drop_pin_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
